# routes/quests.js
@@ -20,20 +20,20 @@ router.post('/:group_id/:user_id', [
     }
 
     const groupId = req.params.group_id * 1;
-    if (!await findByGroupId(groupId)) {
+    const group = await findByGroupId(groupId);
+    if (group === null) {
         return res.status(404).send({
             message: 'Group not found'
         });
     }
 
     const userId = req.params.user_id * 1;
-    if (!await findByUserId(userId)) {
+    const user = await findByUserId(userId);
+    if (user === null) {
         return res.status(404).send({
             message: 'User not found'
         });
     }
-
-    const user = await getUser(userId);
     if (user.group_id !== groupId) {
         return res.status(404).send({
             message: 'User is not joined to this group'
@@ -62,27 +62,111 @@ router.post('/:group_id/:user_id', [
 });
 
 //심부름 목록 조회
-router.get('/:group_id',async (req, res)=>{
+router.get('/:group_id', async (req, res) => {
     const groupId = req.params.group_id * 1;
-    if (!await findByGroupId(groupId)) {
+    const group = await findByGroupId(groupId);
+    if (group === null) {
         return res.status(404).send({
             message: 'Group not found'
         });
     }
 
-    try{
+    try {
         const quests = await Quest.findAll({
-            attributes : [
-                'quest_id','request_user_id','quest_title',
-                'quest_content','complete_check','accept_user_id'
+            attributes: [
+                'quest_id', 'request_user_id', 'quest_title',
+                'quest_content', 'complete_check', 'accept_user_id'
             ],
-            where : {group_id : groupId}
+            where: {group_id: groupId}
         });
 
         return res.status(201).json(quests);
-    }catch (e) {
+    } catch (e) {
         console.error(e);
     }
+});
+
+//심부름 수정
+router.put('/:group_id/:quest_id', [
+    check("questTitle", "title is empty").trim().not().isEmpty(),
+    check("questContent", "content is empty").trim().not().isEmpty()
+], async (req, res) => {
+    const err = validationResult(req);
+    if (validRequest(err)) {
+        console.log(err);
+        return res.status(400).send({
+            message: err.array()[0].msg,
+        });
+    }
+
+    const groupId = req.params.group_id * 1;
+    const group = await findByGroupId(groupId);
+    if (group === null) {
+        return res.status(404).send({
+            message: 'Group not found'
+        });
+    }
+
+    const questId = req.params.quest_id * 1;
+    let quest = await findByQuestId(questId);
+    if (quest === null) {
+        return res.status(404).send({
+            message: 'Quest not found'
+        });
+    }
+
+    if (quest.group_id !== groupId) {
+        return res.status(404).send({
+            message: 'Not quest for a group'
+        })
+    }
+
+    const userId = req.query.requesterId * 1;
+    const user = await findByUserId(userId);
+    if (user === null) {
+        return res.status(404).send({
+            message: 'User not found'
+        });
+    }
+
+    if (user.group_id !== groupId) {
+        return res.status(404).send({
+            message: 'User is not joined to this group'
+        })
+    }
+
+    if (quest.request_user_id !== userId) {
+        return res.status(409).send({
+            message: 'Only users you create can modify'
+        })
+    }
+
+    if (quest.accept_user_id !== -1) {
+        return res.status(405).send({
+            message: 'Already accepted quest'
+        })
+    }
+
+    const {questTitle, questContent} = req.body;
+    await Quest.update(
+        {
+            quest_title: questTitle,
+            quest_content: questContent
+        },
+        {
+            where: {quest_id: questId}
+        }
+    )
+
+    quest = await findByQuestId(questId);
+    return res.status(200).json({
+        requestUserId: quest.request_user_id,
+        questTitle: quest.quest_title,
+        questContent: quest.quest_content,
+        questModifiedDate: quest.updatedAt,
+        completeCheck: quest.complete_check,
+        acceptUserId: quest.accept_user_id
+    });
 });
 
 const validRequest = (error) => {
@@ -90,15 +174,15 @@ const validRequest = (error) => {
 }
 
 const findByUserId = async (id) => {
-    return await User.findByPk(id) !== null;
+    return await User.findByPk(id);
 }
 
 const findByGroupId = async (id) => {
-    return await Group.findByPk(id) !== null;
+    return await Group.findByPk(id);
 }
 
-const getUser = async (id) => {
-    return await Users.findByPk(id);
+const findByQuestId = async (id) => {
+    return await Quest.findByPk(id);
 }
 
 module.exports = router;
